apps/workloads/media/unpackerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      containers:
        - name: unpackerr
          image: ghcr.io/unpackerr/unpackerr
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: downloads-mount
              mountPath: /data # Path inside the container
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1027
      volumes:
        - name: downloads-mount
          persistentVolumeClaim:
            claimName: media-pvc
