apps/workloads/media/unpackerr/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unpackerr-policy
spec:
  endpointSelector:
    matchLabels:
      app: unpackerr
  # ----=== Egress ===----
  egress:
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: radarr-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-ui
            namespace: media
